--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 .footer-border {
   background: #fff;
   border-radius: 20px;
-  border: 1px solid #e0e0e0;
+  border: 1px solid #f2ededdd;
   max-width: 1200px;
   margin: 0 auto;
 }
